[package]
name = "property-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
bril-rs = { version = "0.1.0", path = "src/bril_rs", features = ["bitcast", "char", "float", "import", "memory", "position", "speculate", "ssa"] }
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0.143"
