[package]
name = "rust_stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
bril-rs = { version = "0.1.0", path = "../bril-rs", features = ["bitcast", "char", "float", "import", "memory", "position", "speculate", "ssa"] }
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0.143"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.dev]
debug = "line-tables-only"

[build]
rustflags = ["-C", "force-frame-pointers=yes"]
